[package]
name = "uuidv4"
authors = ["Adrian"]
description = "A lightweight library for generating UUID v4"
version = "1.0.0"
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dev-dependencies]
regex = "1.5.4"